# teacup

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  README.md
source/teacup/: maths.cc  maths.h  teacup.cc  types.h
source/tests/: maths.cc  tests.cc
src/: main.cc  types.h
